--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,10 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
+  ],
+  "exclude": [
+    "src/tests",          // Vitest / RTL files
+    "**/*.test.tsx",      // safety net
+    "**/*.test.ts"        // "
   ]
 }
