chore: update TypeScript configuration and improve test imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
+    { "path": "./tsconfig.node.json" },
+    { "path": "./tsconfig.test.json" }
   ],
   "exclude": [
     "test",          // Vitest / RTL files
