--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4",
     "vitest": "^3.2.4",
-    "@vitest/ui": "^3.2.4"
+    "@vitest/ui": "^3.2.4",
+    "msw": "^2.4.9"
   }
 }
