--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "@tanstack/react-query": "^5.51.11",
+    "@tanstack/react-query-devtools": "^5.51.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
